backend v0.3.0
OpenAPI:
- Added GET '/sending_filter' endpoint
