# backend/api/oas_handlers_gen.go
@@ -92,6 +92,103 @@ func (s *Server) handlePostcodesBySettlementGetRequest(args [0]string, w http.Re
 	}
 }
 
+// handleSendingFilterGetRequest handles GET /sending_filter operation.
+//
+// Get sendings that fit the filter. Require `page` and `elems_on_page`. Return amount of sendings
+// that fit the filter and sendings on the selected page.
+//
+// GET /sending_filter
+func (s *Server) handleSendingFilterGetRequest(args [0]string, w http.ResponseWriter, r *http.Request) {
+	var otelAttrs []attribute.KeyValue
+
+	// Start a span for this request.
+	ctx, span := s.cfg.Tracer.Start(r.Context(), "SendingFilterGet",
+		serverSpanKind,
+	)
+	defer span.End()
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		elapsedDuration := time.Since(startTime)
+		s.duration.Record(ctx, elapsedDuration.Microseconds(), otelAttrs...)
+	}()
+
+	// Increment request counter.
+	s.requests.Add(ctx, 1, otelAttrs...)
+
+	var (
+		recordError = func(stage string, err error) {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			s.errors.Add(ctx, 1, otelAttrs...)
+		}
+		err          error
+		opErrContext = ogenerrors.OperationContext{
+			Name: "SendingFilterGet",
+			ID:   "",
+		}
+	)
+	params, err := decodeSendingFilterGetParams(args, r)
+	if err != nil {
+		err = &ogenerrors.DecodeParamsError{
+			OperationContext: opErrContext,
+			Err:              err,
+		}
+		recordError("DecodeParams", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+
+	var response SendingFilterGetRes
+	if m := s.cfg.Middleware; m != nil {
+		mreq := middleware.Request{
+			Context:       ctx,
+			OperationName: "SendingFilterGet",
+			OperationID:   "",
+			Body:          nil,
+			Params: map[string]any{
+				"page":          params.Page,
+				"elems_on_page": params.ElemsOnPage,
+				"filter":        params.Filter,
+				"sort":          params.Sort,
+			},
+			Raw: r,
+		}
+
+		type (
+			Request  = struct{}
+			Params   = SendingFilterGetParams
+			Response = SendingFilterGetRes
+		)
+		response, err = middleware.HookMiddleware[
+			Request,
+			Params,
+			Response,
+		](
+			m,
+			mreq,
+			unpackSendingFilterGetParams,
+			func(ctx context.Context, request Request, params Params) (Response, error) {
+				return s.h.SendingFilterGet(ctx, params)
+			},
+		)
+	} else {
+		response, err = s.h.SendingFilterGet(ctx, params)
+	}
+	if err != nil {
+		recordError("Internal", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+
+	if err := encodeSendingFilterGetResponse(response, w, span); err != nil {
+		recordError("EncodeResponse", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+}
+
 // handleSendingGetRequest handles GET /sending operation.
 //
 // Get information about a sending by `order_id`. Require a complete match of `order_id`. Return
@@ -188,7 +285,7 @@ func (s *Server) handleSendingGetRequest(args [0]string, w http.ResponseWriter, 
 
 // handleSendingPostRequest handles POST /sending operation.
 //
-// Registration of a new sending Require `type`, `sender`, `receiver`, `size`, `weight` Return
+// Registration of a new sending. Require `type`, `sender`, `receiver`, `size`, `weight`. Return
 // `order_id` of new sending.
 //
 // POST /sending
