# backend/api/oas_response_encoders_gen.go
@@ -25,6 +25,37 @@ func encodePostcodesBySettlementGetResponse(response PostcodesBySettlementGetRes
 
 }
 
+func encodeSendingFilterGetResponse(response SendingFilterGetRes, w http.ResponseWriter, span trace.Span) error {
+	switch response := response.(type) {
+	case *SendingFilterGetResponse:
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(200)
+		span.SetStatus(codes.Ok, http.StatusText(200))
+		e := jx.GetEncoder()
+
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+		return nil
+
+	case *Error:
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(400)
+		span.SetStatus(codes.Error, http.StatusText(400))
+		e := jx.GetEncoder()
+
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+		return nil
+
+	default:
+		return errors.Errorf("unexpected response type: %T", response)
+	}
+}
+
 func encodeSendingGetResponse(response SendingGetRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *SendingGetResponse:
