# backend/api/oas_unimplemented_gen.go
@@ -23,6 +23,16 @@ func (UnimplementedHandler) PostcodesBySettlementGet(ctx context.Context) (r Pos
 	return r, ht.ErrNotImplemented
 }
 
+// SendingFilterGet implements GET /sending_filter operation.
+//
+// Get sendings that fit the filter. Require `page` and `elems_on_page`. Return amount of sendings
+// that fit the filter and sendings on the selected page.
+//
+// GET /sending_filter
+func (UnimplementedHandler) SendingFilterGet(ctx context.Context, params SendingFilterGetParams) (r SendingFilterGetRes, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
 // SendingGet implements GET /sending operation.
 //
 // Get information about a sending by `order_id`. Require a complete match of `order_id`. Return
@@ -35,7 +45,7 @@ func (UnimplementedHandler) SendingGet(ctx context.Context, params SendingGetPar
 
 // SendingPost implements POST /sending operation.
 //
-// Registration of a new sending Require `type`, `sender`, `receiver`, `size`, `weight` Return
+// Registration of a new sending. Require `type`, `sender`, `receiver`, `size`, `weight`. Return
 // `order_id` of new sending.
 //
 // POST /sending
